--- a/tjenester.html
+++ b/tjenester.html
@@ -22,7 +22,7 @@
   <header class="site-header">    
     <div class="container header-inner">
       <a class="brand" href="index.html" aria-label="Nyfødthjelpen hjem">
-        <img src="images/blå,rosa-ikon.png" alt="" class="brand-logo">
+        <img src="images/blarosaikon.png" alt="" class="brand-logo">
         <span class="brand-text">Nyfødthjelpen</span>
       </a>
 
