--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Nyfødthjelpen</title>
-  <meta name="description" content="Avlasting og støtte for deg og dine små. Mandager & tirsdager fra kun 599,- pr time." />
+  <meta name="description" content="Avlasting og støtte for deg og dine små. Fra kun 599,- pr time." />
 
   <!-- SEO & deling -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Nyfødthjelpen - Avlastning med god samvittighet">
-  <meta property="og:description" content="Avlasting og støtte for deg og dine små. Mandager & tirsdager fra kun 599,- pr time.">
+  <meta property="og:description" content="Avlasting og støtte for deg og dine små. Fra kun 599,- pr time.">
   <meta property="og:image" content="images/nyfødt.jpg">
   <meta property="og:locale" content="nb_NO">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Nyfødthjelpen - Avlastning med god samvittighet">
-  <meta name="twitter:description" content="Avlasting og støtte for deg og dine små. Mandager & tirsdager fra kun 599,- pr time.">
+  <meta name="twitter:description" content="Avlasting og støtte for deg og dine små. Fra kun 599,- pr time.">
   <meta name="twitter:image" content="images/nyfødt.jpg">
   <link rel="icon" href="/favicon.ico">
 
@@ -71,7 +71,7 @@
       <div class="container hero-inner">
         <div class="hero-text">
           <h1 class="hero-title">Avlastning <br> med god samvittighet</h1>
-          <p class="hero-subtitle">Mandager &amp; tirsdager fra kun <strong>599,- / timen</strong></p>
+          <p class="hero-subtitle">Fra kun <strong>599,- / timen</strong></p>
           <a class="button button-primary" href="#kontakt">Bestill din time i dag</a>
         </div>
       </div>
@@ -201,9 +201,10 @@
       <div class="container contact-inner">
         <div class="contact-info">
           <h2 class="section-title">Trenger du en hjelpende hånd?</h2>
+          <p>Send en mail til <a href="mailto:nyfodthjelpen.mette@gmail.com"><strong>nyfodthjelpen.mette@gmail.com</strong></a><br> eller bruk skjemaet.</p>
           <ul class="bullet-list">
-            <li>Vi er ledige mandager og tirsdager</li>
-            <li>Gjesdal, Klepp, Time &amp; Sandnes</li>
+            <li>Vi etterstreber å være tilgjengelige hele døgnet, alle dager i uken. Det påløper tilleggskostnader ved avtaler på kvelder, netter og i helger</li>
+            <li>Vi jobber med å skaffe konsulenter for å dekke alle kommuner i hele landet</li>
           </ul>
           <p><strong>Kun 599,- i timen</strong> / <strong>999,- for 2 timer</strong></p>
           <div class="socials">
@@ -269,7 +270,7 @@
 
           <details class="faq-item">
             <summary><span>Er Nyfødthjelpen tilgjengelig 24/7?</span></summary>
-            <p>Starter med å tilby hjelp hovedsaklig mandag og tirsdager på dagtid. Kan derimot rykke ut andre dager om ønskelig. Jeg ønsker også å tilby hjelp enkelte kvelder og netter dersom det er behov for det.</p>
+            <p>Vi ønsker å tilby hjelp alle hverdager, men kan og stille opp enkelte kvelder og helg mot ekstra kostnader.</p>
           </details>
 
           <details class="faq-item">
@@ -346,4 +347,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
