--- a/tjenester.html
+++ b/tjenester.html
@@ -134,12 +134,12 @@
     <section class="contact section" id="kontakt">
       <div class="container contact-inner">
         <div class="contact-info">
-          <h2 class="section-title alt-font">Trenger du en hjelpende hånd?</h2>
+          <h2 class="section-title">Trenger du en hjelpende hånd?</h2>
+          <p>Send en mail til <a href="mailto:nyfodthjelpen.mette@gmail.com"><strong>nyfodthjelpen.mette@gmail.com</strong></a><br> eller bruk skjemaet.</p>
           <ul class="bullet-list">
-            <li>Vi er ledige mandager og tirsdager</li>
-            <li>Gjesdal, Klepp, Time &amp; Sandnes</li>
+            <li>Vi etterstreber å være tilgjengelige hele døgnet, alle dager i uken. Det påløper tilleggskostnader ved avtaler på kvelder, netter og i helger</li>
+            <li>Vi jobber med å skaffe konsulenter for å dekke alle kommuner i hele landet</li>
           </ul>
-          <p class="lead">Nå tilbyr vi også <strong>GAVEKORT</strong>, så gled noen du er glad i!</p>
           <p><strong>Kun 599,- i timen</strong> / <strong>999,- for 2 timer</strong></p>
           <div class="socials">
             <a href="https://www.facebook.com/profile.php?id=61579301612404" aria-label="Facebook" target="_blank" class="social">Facebook</a>
