--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="no">
 <head>
+  <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Nyfødthjelpen</title>
@@ -349,3 +350,4 @@
 </body>
 
 </html>
+
