--- a/omoss.html
+++ b/omoss.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="no">
 <head>
+  <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Om oss - Nyfødthjelpen</title>
@@ -200,3 +201,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
