--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
           </details>
 
           <details class="faq-item">
-            <summary><span>Er Nyfødthjelpen tilgjengelig 24/7?</span></summary>
+            <summary><span>Når er nyfødthjelpen tilgjengelig?</span></summary>
             <p>Vi ønsker å tilby hjelp alle hverdager, men kan og stille opp enkelte kvelder og helg mot ekstra kostnader.</p>
           </details>
 
@@ -350,4 +350,5 @@
 </body>
 
 </html>
+
 
