--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Nyfødthjelpen - Avlastning med god samvittighet">
   <meta property="og:description" content="Avlasting og støtte for deg og dine små. Fra kun 599,- pr time.">
-  <meta property="og:image" content="images/nyfødt.jpg">
+  <meta property="og:image" content="images/nyfodt.jpg">
   <meta property="og:locale" content="nb_NO">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Nyfødthjelpen - Avlastning med god samvittighet">
@@ -350,5 +350,6 @@
 </body>
 
 </html>
+
 
 
