--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <div class="cta-wide-inner">
         <h2 class="cta-wide-text">
           <em>Vi har også gleden av å tilby gavekort.</em> 
-          <span class="normal-text">Overrsak noen du er glad i og gi dem en velfortjent avlastning.</span>
+          <span class="normal-text">Overrask noen du er glad i og gi dem en velfortjent avlastning.</span>
         </h2>
       </div>
     </section>
@@ -350,6 +350,7 @@
 </body>
 
 </html>
+
 
 
 
