--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
           <details class="faq-item">
             <summary><span>Kan jeg få akutthjelp på kort tid?</span></summary>
-            <p>Det er et ønske om at dette skal ordnes på sikt. Jeg er derimot ikke tilgjengelig 24/7 på grunn av min jobb på sykehuset.</p>
+            <p>Det er et ønske om at dette skal ordnes på sikt.</p>
           </details>
         </div>
       </div>
@@ -350,6 +350,7 @@
 </body>
 
 </html>
+
 
 
 
